--- a/app/views/edit/roles/addUserToRole.scala.html
+++ b/app/views/edit/roles/addUserToRole.scala.html
@@ -1,22 +1,29 @@
-@(userAddToRoleForm: Form[models.viewmodels.AddUserToRoleForm])(implicit flash: Flash)
+@(userAddToRoleForm: Form[models.viewmodels.AddUserToRoleForm],
+        optionUsers: Option[Seq[(String,String)]],
+        optionRoles: Option[Seq[(String,String)]])(implicit flash: Flash)
+
 @import helper.twitterBootstrap._
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("edit.title")) {
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.roles.add.header")</h1>
-            @helper.form(action=routes.UserRoleController.addUserToRoleSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-horizontal"){
-                <fieldset>
-                    @helper.inputText(userAddToRoleForm("userObjectId"), '_label -> Messages("edit.roles.addusertorole.user"), '_help -> Messages("edit.roles.addusertorole.user.validation"))
-                    @helper.inputText(userAddToRoleForm("roleObjectId"), '_label -> Messages("edit.roles.addusertorole.role"), '_help -> Messages("edit.roles.addusertorole.role.validation"))
-                </fieldset>
-                <div class="form-actions">
-                    <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@routes.UserRoleController.index()">@Messages("edit.add.abort")</a>
-                </div>
+            <h1 class="page-header">@Messages("edit.roles.addusertorole.header")</h1>
+            @if(optionRoles.nonEmpty && optionUsers.nonEmpty) {
+                @helper.form(action = routes.UserRoleController.addUserToRoleSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-horizontal") {
+                    <fieldset>
+                        @helper.select(userAddToRoleForm("userObjectId"), optionUsers.get, '_label -> Messages("edit.roles.addusertorole.user"), '_help -> Messages("edit.roles.addusertorole.user.validation"))
+                        @helper.select(userAddToRoleForm("roleObjectId"), optionRoles.get, '_label -> Messages("edit.roles.addusertorole.role"), '_help -> Messages("edit.roles.addusertorole.role.validation"))
+                        @helper.checkbox(userAddToRoleForm("addOrRemoveRole"), '_label -> Messages("edit.roles.addusertorole.addorremove"))
+                    </fieldset>
+                    <div class="form-actions">
+                        <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
+                        <a class="btn" href="@routes.UserRoleController.index()">@Messages("edit.add.abort")</a>
+                    </div>
+                }
+            } else {
+                @Messages("edit.roles.addusertorole.nocontent")
             }
         </div>
     </div>
-
 }
